syntax = "proto3";

//from root directory compile this as follows:
//protoc --java_out=src/main/java protos/message.proto

option java_package = "project2.protos";
option java_outer_classname = "Message";

message PublishRequest {
  bytes data = 1;
  string topic = 2;
}

message PullRequest {
  string topic = 1;
  int64 startingPosition = 2;
}

message Wrapper {
  oneof msg {
    PublishRequest pubReq = 1;
    PullRequest pullReq = 2;
  }
}